# cmake-ps2

./: .gitignore  .hgignore  CMakeLists.txt  FindPS2SDK.cmake  Makefile  README  build-ee.cmake  build.sh  hello.c
cmake/: EE.cmake  FindPS2SDK.cmake  IOP.cmake  build-ee.cmake  toolchain-ee.cmake  toolchain-iop.cmake
hello/: CMakeLists.txt
hello-erl/: CMakeLists.txt
libconfig/: CMakeLists.txt
teapot/: CMakeLists.txt
test/ee/: CMakeLists.txt
test/ee/hello/: CMakeLists.txt
test/ee/hello-erl/: CMakeLists.txt
test/ee/libconfig/: CMakeLists.txt
test/ee/teapot/: CMakeLists.txt  Makefile
test/hello/: CMakeLists.txt  Makefile
test/hello-erl/: CMakeLists.txt  Makefile
test/iop/: CMakeLists.txt
test/iop/netlog/: CMakeLists.txt  Makefile  xprintf.c
test/libconfig/: CMakeLists.txt  Makefile.PS2
test/netlog/: CMakeLists.txt  Rules.make  build-exports.c  build-imports.c
test/teapot/: CMakeLists.txt  Makefile
