PROJECT("CMake PS2 Sample" C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#INCLUDE(cmake/FindPS2SDK.cmake)
SET(PS2DEV $ENV{PS2DEV})
SET(PS2SDK $ENV{PS2SDK})

SET(EE_BIN hello.elf)
SET(EE_SRCS hello.c)
SET(EE_LIBS "")
SET(EE_CFLAGS "")
SET(EE_LDFLAGS "")

SET(CMAKE_C_FLAGS "-D_EE -O2 -G0 -Wall" ${EE_CFLAGS})
SET(CMAKE_C_FLAGS_DEBUG ${CMAKE_C_FLAGS} "-DDEBUG")
SET(CMAKE_EXE_LINKER_FLAGS "-mno-crt0 -T${EE_LINKFILE}" ${EE_LDFLAGS})

ADD_EXECUTABLE(${EE_BIN} ${EE_SRCS} ${EE_CRT0})
TARGET_LINK_LIBRARIES(${EE_BIN} ${EE_LIBS} c kernel)
