PROJECT("hello-erl" C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(EE_ERL hello.erl)
SET(EE_SRCS hello.c)
SET(EE_CFLAGS "")
SET(EE_LDFLAGS "")

SET(CMAKE_C_FLAGS "-D_EE -O2 -G0 -Wall ${EE_CFLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "-mno-crt0 -Wl,-r -Wl,-d ${EE_LDFLAGS}")

ADD_EXECUTABLE(${EE_ERL} ${EE_SRCS})
ADD_CUSTOM_COMMAND(TARGET ${EE_ERL} POST_BUILD COMMAND ${CMAKE_STRIP}
    ARGS --strip-unneeded -R .mdebug.eabi64 -R .reginfo -R .comment ${EE_ERL})
