PROJECT("teapot" C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(EE_BIN teapot.elf)
SET(EE_SRCS teapot.c)
SET(EE_LIBS -ldraw -lgraph -lmath3d -lmf -lpacket -ldma)
SET(EE_CFLAGS "")
SET(EE_LDFLAGS "")

SET(CMAKE_C_FLAGS "-D_EE -O2 -G0 -Wall ${EE_CFLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "-mno-crt0 -T${EE_LINKFILE} ${EE_LDFLAGS}")

ADD_EXECUTABLE(${EE_BIN} ${EE_CRT0} ${EE_SRCS})
TARGET_LINK_LIBRARIES(${EE_BIN} ${EE_LIBS} -lc -lkernel)
