PROJECT("hello-erl" C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(EE_ERL hello)
SET(EE_SRCS hello.c)

SET(CMAKE_C_FLAGS "")
#SET(CMAKE_EXE_LINKER_FLAGS "-mno-crt0 -Wl,-r -Wl,-d ${EE_LDFLAGS}")

ADD_LIBRARY(${EE_ERL} SHARED ${EE_SRCS})

#ADD_CUSTOM_COMMAND(TARGET ${EE_ERL} POST_BUILD COMMAND ${CMAKE_STRIP}
#    ARGS --strip-unneeded -R .mdebug.eabi64 -R .reginfo -R .comment ${EE_ERL})

# for debugging
#ADD_CUSTOM_COMMAND(TARGET ${EE_ERL} POST_BUILD COMMAND ee-readelf ARGS -e ${EE_ERL})
ADD_CUSTOM_COMMAND(TARGET ${EE_ERL} POST_BUILD COMMAND md5sum ARGS libhello.a)
