PROJECT("hello" C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(EE_BIN hello.elf)
SET(EE_SRCS hello.c)
SET(EE_LIBS -ldebug)

SET(CMAKE_C_FLAGS "${EE_CFLAGS} -s")
SET(CMAKE_EXE_LINKER_FLAGS "-mno-crt0 -T${EE_LINKFILE} ${EE_LDFLAGS}")

ADD_EXECUTABLE(${EE_BIN} ${EE_CRT0} ${EE_SRCS})
TARGET_LINK_LIBRARIES(${EE_BIN} ${EE_LIBS} -lc -lkernel)

# for debugging
ADD_CUSTOM_COMMAND(TARGET ${EE_BIN} POST_BUILD COMMAND ee-readelf ARGS -e ${EE_BIN})
ADD_CUSTOM_COMMAND(TARGET ${EE_BIN} POST_BUILD COMMAND ee-size ARGS ${EE_BIN})
ADD_CUSTOM_COMMAND(TARGET ${EE_BIN} POST_BUILD COMMAND md5sum ARGS ${EE_BIN})
