PROJECT("hello" C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(EE_BIN hello.elf)
SET(EE_SRCS hello.c)
SET(EE_LIBS -ldebug)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s")

ADD_EXECUTABLE(${EE_BIN} ${EE_SRCS})
TARGET_LINK_LIBRARIES(${EE_BIN} ${EE_LIBS})

ADD_CUSTOM_COMMAND(TARGET ${EE_BIN} POST_BUILD COMMAND md5sum ARGS ${EE_BIN})
